# ambient

./: .gitignore  Ambient.drawio  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
airflow/dags/: alerts.py  dbt_orchestration.py  iot_data_pipeline.py  kafka_orchestration.py  postal_code_enrichment.py
data/processed/: iot_data_1cc11eb3.parquet  iot_data_1fdc29aa.parquet  iot_data_a19f6ad1.parquet  iot_data_f3be9425.parquet
data/raw/: iot_data_20241225_164159.parquet  iot_data_20241225_165058.parquet  iot_data_20241225_165101.parquet  iot_data_20241225_165103.parquet  iot_data_20241225_165104.parquet  iot_data_20241225_165107.parquet  iot_data_20241225_165111.parquet  iot_data_20241225_165116.parquet  iot_data_20241225_165120.parquet  iot_data_20241225_165125.parquet  iot_data_20241225_165130.parquet  iot_data_20241225_165135.parquet  iot_data_20241225_165140.parquet  iot_data_20241225_165145.parquet  iot_data_20241225_165149.parquet  iot_data_20241225_165154.parquet  iot_data_20241225_165200.parquet  iot_data_20241225_165205.parquet  iot_data_20241225_165210.parquet  iot_data_20241225_165215.parquet
dbt_project/iot_data_project/: .user.yml  dbt_project.yml  packages.yml  profiles.yml
pinecone/: assistant.py  data.json  insert_data.py  main.py  query.py
scripts/: _generate_data.py
src/enrichment/: postal_code_enrichment.py
src/ingestion/: client.properties  iot_consumer.py  iot_producer.py
src/kafka/: iot_consumer.py  iot_producer.py
src/processing/: postal_code_lookup.py
(+10 files in other folders)
