[project]
name = "ambient"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "apache-airflow[amazon,celery,postgres]==2.6.2",
    "boto3>=1.35.87",
    "flask-session==0.4.0",
    "flask>=2.0",
    "numpy>=2.0.2",
    "pendulum<3.0",
    "polars>=1.18.0",
    "pydantic<2.0",
    "pylint>=3.3.3",
    "connexion[swagger-ui]<3.0",
    "apache-airflow-providers-amazon>=8.20.0",
    "kafka>=1.3.5",
    "confluent-kafka>=2.7.0",
    "python-dotenv>=1.0.1",
    "kafka-python>=2.0.2",
    "pyarrow>=18.1.0",
    "snowflake>=0.8.0",
    "dbt-snowflake>=1.9.0",
    "apache-airflow-providers-slack>=8.6.2",
]
